fix: fix bug bg color on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 215 79%, 46%;
+    --primary: 215 79% 46%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -24,7 +24,7 @@
     --destructive-foreground: 210 40% 98%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 215 79%, 46%;
+    --ring: 215 79% 46%;
     --radius: 0.5rem;
   }
 
